Made changes in the user interface

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                     </div>
                     <div class="row">
                         <label>Age</label>
-                        <input type="text" id="min-age" placeholder="minimum age"/>
-                        <input type="text" id="max-age" placeholder="maxmum age"/>
+                        <input type="number" id="min-age" placeholder="minimum age" min="0"/>
+                        <input type="number" id="max-age" placeholder="maxmum age"/>
                     </div>
                     <div class="row">
                         <button id="searchBtn">Search</button>
