Added the javascript implementation

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <div class="row">
                         <label>Age</label>
                         <input type="number" id="min-age" placeholder="minimum age" min="0"/>
-                        <input type="number" id="max-age" placeholder="maxmum age"/>
+                        <input type="number" id="max-age" placeholder="maximum age"/>
                     </div>
                     <div class="row">
                         <button id="searchBtn">Search</button>
